# livetty

./: .gitignore  README.md
.github/workflows/: release.yml
server/: Cargo.toml
server/src/: auth.rs  client.rs  files.rs  main.rs  term.rs  ws.rs
web/: index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
web/src/: api.ts  app.ts  editorpane.ts  main.ts  termpane.ts  wsclient.ts
