[package]
name = "livetty"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vt100 = { git = "https://github.com/Piebald-AI/vt100-rust", branch = "main" }
portable-pty = "0.9"
rand = "0.9"
bytes = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.29"
rust-embed = "8"
mime_guess = "2"

[profile.release]
opt-level = 2
strip = true
lto = "thin"
